# forked-projects

./: .gitignore  README.md
apriltags_c/: CMakeLists.txt  makefile.bkup
apriltags_cpp/: CMakeLists.txt  apriltags_demo.cpp
apriltags_cpp/include/apriltags/: GLine2D.h  GLineSegment2D.h  Gridder.h  Quad.h  TagDetection.h  TagDetector.h  TagFamily.h  pch.h
apriltags_cpp/src/: Edge.cc  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc  UnionFindSimple.cc
